tests/invalid_programs/variable3.jas
// Expect variable type.

let x: = 5;
